fix xss issues #1685

--- a/app/assets/stylesheets/admin/_task.less
+++ b/app/assets/stylesheets/admin/_task.less
@@ -16,6 +16,13 @@
   margin-top: @navbar-height + 20px;
 }
 
+.popover {
+  width: 400px;
+}
+.popover-content {
+  white-space: pre-wrap;
+}
+
 #task-overview {
 
   svg a:hover {
@@ -24,9 +31,6 @@
     &[href] {
       cursor: pointer;
     }
-  }
-  .popover {
-    width: 400px;
   }
 
   path {
